support multiple repos/projects for secret manager

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,7 @@ SECRETS_LOCATION="ip or hostname"
 # uncomment when you did
 # REMEMBER_SECRETS_CERT="yes"
 
-MAIN_REPO="git@github.com:octocat/Spoon-Knife.git"
+# secret manager's reference namespace
+APPLICATION_NAME="octocat/Spoon-Knife"
+# repo to clone
+APPLICATION_REPO="git@github.com:octocat/Spoon-Knife.git"
